Cambios de css y codigo para guardado

--- a/public/ActualizacionTyH.html
+++ b/public/ActualizacionTyH.html
@@ -12,9 +12,11 @@
         <label for="" id="Temperatura">0</label>
         <label for="">Humedad</label>
         <label for="" id="Humedad">0</label>
-        <button id="TyH" type="button">Actualizar</button>
     </form>
-    <button></button>
+    <div>
+        <button id="TyH" type="button">Actualizar</button>
+        <button type="button" onclick="Atras()">Atras</button>
+    </div>
 </body>
 <script src="./script/scriptTyH.js"></script>
 </html>
