--- a/public/EstablecerRiego.html
+++ b/public/EstablecerRiego.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/styleCalendario.css">
     <title>Document</title>
 </head>
 <body>
@@ -14,7 +15,10 @@
         <label for="">Minutos de Riego</label>
         <input type="number" name="Minutos" maxlength="2">
     </form>
-    <button type="button" id="Agendar">Agendar</button>
+    <div>
+        <button type="button" id="Agendar">Agendar</button>
+        <button type="button" id="Atras" onclick="Atras()">Atras</button>
+    </div>
 </body>
 <script src="./script/scriptCalendario.js"></script>
 </html>
