--- a/public/MostrarAgenda.html
+++ b/public/MostrarAgenda.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/styleRegistroHistorico.css">
+    <link rel="stylesheet" href="./styles/styleMostrarAgenda.css">
     <title>Document</title>
 </head>
 <body>
@@ -16,10 +16,9 @@
         </tbody>
     </table>
     <div>
-        <button id="Registros">Mostrar Registro</button>
-        <button type="button" id="Atras" onclick="Atras()">Atras</button>
+        <button type="button" id="Mostrar">Mostrar</button>
+        <button type="button" onclick="Atras()">Atras</button>
     </div>
-
 </body>
-<script src="./script/ScriptRegistros.js"></script>
+<script src="./script/scriptMostrarAgenda.js"></script>
 </html>
