--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,15 @@
                 </div>
             </form>
         </div>
+        <div>
+            <form action="" class="FlexForm">
+                <div class="FlexAjusteTarjeta">
+                    <label for="">Mostrar Agenda</label>
+                    <button type="button" onclick="AbrirRegistroAgenda()">Entrar</button>
+                </div>
+            </form>
+        </div>
+
 
     </div>
 </body>
