--- a/public/ConectarDisp.html
+++ b/public/ConectarDisp.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
+    <form action="" id="limpiador">
+        <label for="" class="SensorNombre">Sensor de Humedad</label>
+        <label for="Cantidad">Cantidad</label>
+        <input type="number">
+    </form>
     <label for="" id="LabelConect"> Desconectado</label>
     <div>
         <button type="button" id="Conectar">Conectar</button>
