--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,14 @@
                 </div>
             </form>
         </div>
+        <div>
+            <form action="" class="FlexForm">
+                <div class="FlexAjusteTarjeta">
+                    <label for="">Conectar dispositivos</label>
+                    <button type="button" onclick="AbrirConectar()">Entrar</button>
+                </div>
+            </form>
+        </div>
 
 
     </div>
